...

  @override
  Widget build(BuildContext context, WidgetRef ref) {
    final postAsync = ref.watch(postByIdProvider(postId));

    return Scaffold(
      key: const Key('localNewsDetailScreen'),
      appBar: AppBar(
        title: const Text('news.detailTitle').tr(),
        actions: [
          postAsync.whenOrNull(
                data: (post) {
                  if (post == null) return const SizedBox.shrink();
...
